<resources>
    <string name="app_name">它嗅宠物</string>


    <string name="skip">跳过</string>
    <string name="pet_kind_choose">已选择:%1s</string>
    <string name="taxiu">它秀</string>
    <string name="topic_detail_menu_index">首页</string>
    <string name="publish">发布</string>

    <string name="add_cart_success">加入购物车成功</string>


    <string name="sign_in_rule">1.VIP1,VIP2,VIP3,每天签到可获得不同积分;\n2.连续签到7天，可分别获得更多积分;\n如果连续签到中断，则需要重新开始</string>


    <string name="classroom_hint">请将二维码保存至相册，课堂开课时，在微信中\n扫描二维码界面，选择\"相册\"打开二维码，即\n可进入课堂，参与课堂互动</string>
    <string name="home_pet_talk">我能独自一个人在外面找到自己的家,还可以不迷路,随时随地找到家的方向~汪汪汪,陌生人带不走我~</string>


    <string name="home_scroll_view_behavior">com.ipd.taxiu.widget.HomeScrollBehavior</string>


    <!--上拉刷新下拉加载-->
    <string name="refreshview_header_hint_normal">下拉刷新</string>
    <string name="refreshview_header_hint_ready">松开立即刷新</string>
    <string name="refreshview_header_hint_refreshing">正在刷新数据中...</string>
    <string name="refreshview_header_hint_loading">正在刷新数据中...</string>
    <string name="refreshview_header_hint_loaded">刷新成功</string>
    <string name="refreshview_header_hint_loaded_fail">刷新失败</string>
    <string name="refreshview_header_last_time">上次更新时间：</string>
    <string name="refreshview_footer_hint_normal">加载完成</string>
    <string name="refreshview_footer_hint_fail">加载失败，请重试</string>
    <string name="refreshview_footer_hint_complete">已无更多数据</string>
    <string name="refreshview_footer_hint_click">上拉加载</string>
    <string name="refreshview_footer_hint_release">松开加载更多</string>
    <string name="refreshview_footer_hint_ready">松开载入更多</string>
    <string name="refreshview_never_refresh">从未刷新</string>
    <string name="refreshview_refresh_justnow">刚刚刷新</string>
    <string name="refreshview_refresh_minutes_ago">%1s分钟之前刷新</string>
    <string name="refreshview_refresh_hours_ago">%1s小时之前刷新</string>
    <string name="refreshview_refresh_days_ago">%1s天之前刷新</string>
    <string name="NO_MORE_DATA">没有更多数据了</string>
    <string name="EMPTY_DATA">没有发现数据</string>
    <string name="loading_error">加载失败...</string>


    <string name="video_shoot_tip">拖动选择你要发表的%d秒以内片段！</string>
    <string name="shoot_video">拍摄视频</string>
    <string name="video_from_local">上传相册视频</string>
    <string name="camera">从相册选择</string>
    <string name="photo">拍照</string>
    <string name="save">保存</string>
    <string name="new_project">发布</string>
    <string name="commit">提交</string>

    <string name="product_purchase_remind_num">已有%d人设置提醒</string>
    <string name="product_purchase_num">已有%d人抢购</string>
    <string name="take_it_score">获得%d积分</string>
    <string name="store_gift_coupon_num">恭喜你领取了%d张优惠券</string>
    <string name="store_gift_coupon_date">有效期至:%s</string>
    <string name="product_stock">库存 %d</string>
    <string name="product_sales">已售 %d</string>
    <string name="withdraw_hint">提示：您本月还可提现%d次，每次最多提现1000元；</string>
    <!-- 个人 -->
    <string name="sign_in">签到</string>
    <string name="collect">收藏</string>
    <string name="fans">粉丝</string>
    <string name="attention">关注</string>
    <string name="wait_pay">待付款</string>
    <string name="wait_shipments">待发货</string>
    <string name="wait_delivery">待收货</string>
    <string name="off_the_stocks">已完成</string>
    <string name="all">全部</string>
    <string name="my_spell_group">我的拼团</string>
    <string name="discount_coupon">优惠券</string>
    <string name="account_balance">账户余额</string>
    <string name="integral">积分</string>
    <string name="ta_xiu">它秀</string>
    <string name="classroom">课堂</string>
    <string name="topics">话题</string>
    <string name="questions_answers">问答</string>
    <string name="my_pet">我的宠物</string>
    <string name="pet_bible">宠物宝典</string>
    <string name="pet_housekeeper">养宠管家</string>
    <string name="return_record">退货记录</string>
    <string name="shipping_address">收货地址</string>
    <string name="my_recommendation">我的推荐</string>
    <string name="message">消息</string>
    <string name="setting">设置</string>
    <string name="no_order_msg">暂无订单信息</string>


    <!-- 订单-->
    <string name="order_number">订单号 :</string>
    <string name="delivery_address">收货地址</string>
    <string name="pay_way">支付方式</string>
    <string name="no_return_info">暂无退款退货记录信息</string>
    <string name="package_product_add_cart">组合商品不可加入购物车，请直接购买</string>


    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>


</resources>
