<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/HomeCardStyle">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_padding"
        android:paddingBottom="@dimen/small_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                android:paddingTop="@dimen/small_padding">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/my_pet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:src="@mipmap/my_pet" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/my_pet"
                        android:layout_centerHorizontal="true"
                        android:text="@string/my_pet"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_text_size"
                        android:layout_marginTop="@dimen/small_padding"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/pet_bible"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:src="@mipmap/pet_bible" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/pet_bible"
                        android:layout_centerHorizontal="true"
                        android:text="@string/pet_bible"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_text_size"
                        android:layout_marginTop="@dimen/small_padding"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/pet_housekeeper"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:src="@mipmap/pet_housekeeper" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/pet_housekeeper"
                        android:layout_centerHorizontal="true"
                        android:text="@string/pet_housekeeper"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_text_size"
                        android:layout_marginTop="@dimen/small_padding"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_return_record"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/return_record"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:src="@mipmap/return_record" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/return_record"
                        android:layout_centerHorizontal="true"
                        android:text="@string/return_record"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_text_size"
                        android:layout_marginTop="@dimen/small_padding"/>
                </RelativeLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                android:paddingTop="@dimen/base_padding">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/shipping_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:src="@mipmap/shipping_address" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/shipping_address"
                        android:layout_centerHorizontal="true"
                        android:text="@string/shipping_address"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_text_size"
                        android:layout_marginTop="@dimen/small_padding"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/my_recommendation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:src="@mipmap/my_recommendation" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/my_recommendation"
                        android:layout_centerHorizontal="true"
                        android:text="@string/my_recommendation"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_text_size"
                        android:layout_marginTop="@dimen/small_padding"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/message"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:src="@mipmap/message" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/message"
                        android:layout_centerHorizontal="true"
                        android:text="@string/message"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_text_size"
                        android:layout_marginTop="@dimen/small_padding"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/setting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:src="@mipmap/setting" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/setting"
                        android:layout_centerHorizontal="true"
                        android:text="@string/setting"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_text_size"
                        android:layout_marginTop="@dimen/small_padding"/>
                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>



