<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/HomeCardStyle">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_padding"
        android:paddingBottom="@dimen/small_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                android:paddingTop="@dimen/small_padding">

                <RelativeLayout
                    android:id="@+id/rl_my_group"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/my_spell_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:src="@mipmap/my_spell_group" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/my_spell_group"
                        android:layout_centerHorizontal="true"
                        android:text="@string/my_spell_group"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_text_size"
                        android:layout_marginTop="@dimen/small_padding"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_discount_coupon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/discount_coupon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:src="@mipmap/discount_coupon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/discount_coupon"
                        android:layout_centerHorizontal="true"
                        android:text="@string/discount_coupon"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_text_size"
                        android:layout_marginTop="@dimen/small_padding"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_my_balance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/account_balance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:src="@mipmap/account_balance" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/account_balance"
                        android:layout_centerHorizontal="true"
                        android:text="@string/account_balance"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_text_size"
                        android:layout_marginTop="@dimen/small_padding"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_my_integral"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/integral"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:src="@mipmap/integral" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/integral"
                        android:layout_centerHorizontal="true"
                        android:text="@string/integral"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_text_size"
                        android:layout_marginTop="@dimen/small_padding"/>
                </RelativeLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                android:paddingTop="@dimen/base_padding">

                <RelativeLayout
                    android:id="@+id/rl_published_taxiu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/ta_xiu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:src="@mipmap/ta_xiu" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/ta_xiu"
                        android:layout_centerHorizontal="true"
                        android:text="@string/ta_xiu"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_text_size"
                        android:layout_marginTop="@dimen/small_padding"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_mine_classroom"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/classroom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:src="@mipmap/mine_classroom" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/classroom"
                        android:layout_centerHorizontal="true"
                        android:text="@string/classroom"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_text_size"
                        android:layout_marginTop="@dimen/small_padding"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_mine_join_topic"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/topics"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:src="@mipmap/topics" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/topics"
                        android:layout_centerHorizontal="true"
                        android:text="@string/topics"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_text_size"
                        android:layout_marginTop="@dimen/small_padding"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_mine_talk"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/questions_answers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:src="@mipmap/questions_answers" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/questions_answers"
                        android:layout_centerHorizontal="true"
                        android:text="@string/questions_answers"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_text_size"
                        android:layout_marginTop="@dimen/small_padding"/>
                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>



