<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/fragment_mine_header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/base_padding"
                android:paddingTop="@dimen/base_padding">

                <RelativeLayout
                    android:id="@+id/rl_wait_pay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/wait_pay"
                        style="@style/MineOrderMenuImgStyle"
                        android:src="@mipmap/wait_pay" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/wait_pay"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/small_padding"
                        android:text="@string/wait_pay"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_text_size" />

                    <TextView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_toRightOf="@id/wait_pay"
                        android:background="@drawable/shape_message_bg"
                        android:layout_marginLeft="3dp"
                        android:gravity="center"
                        android:text="99+"
                        android:textColor="@color/white"
                        android:textSize="6sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_wait_shipments"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/wait_shipments"
                        style="@style/MineOrderMenuImgStyle"
                        android:src="@mipmap/wait_shipments" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/wait_shipments"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/small_padding"
                        android:text="@string/wait_shipments"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_text_size" />

                    <TextView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_toRightOf="@id/wait_shipments"
                        android:background="@drawable/shape_message_bg"
                        android:layout_marginLeft="3dp"
                        android:gravity="center"
                        android:text="99+"
                        android:textColor="@color/white"
                        android:textSize="6sp"
                        android:visibility="gone" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_wait_delivery"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/wait_delivery"
                        style="@style/MineOrderMenuImgStyle"
                        android:src="@mipmap/wait_delivery" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/wait_delivery"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/small_padding"
                        android:text="@string/wait_delivery"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_text_size" />

                    <TextView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_toRightOf="@id/wait_delivery"
                        android:background="@drawable/shape_message_bg"
                        android:layout_marginLeft="3dp"
                        android:gravity="center"
                        android:text="99+"
                        android:textColor="@color/white"
                        android:textSize="6sp"
                        android:visibility="gone" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_off_the_stocks"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/off_the_stocks"
                        style="@style/MineOrderMenuImgStyle"
                        android:src="@mipmap/off_the_stocks" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/off_the_stocks"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/small_padding"
                        android:text="@string/off_the_stocks"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_text_size" />

                    <TextView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_toRightOf="@id/off_the_stocks"
                        android:background="@drawable/shape_message_bg"
                        android:layout_marginLeft="3dp"
                        android:gravity="center"
                        android:text="99+"
                        android:textColor="@color/white"
                        android:textSize="6sp"
                        android:visibility="gone" />
                </RelativeLayout>

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="50dp"
                    android:background="@color/c_999999" />

                <RelativeLayout
                    android:id="@+id/rl_all_order"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/all_order"
                        style="@style/MineOrderMenuImgStyle"
                        android:src="@mipmap/all_order" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/all_order"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/small_padding"
                        android:text="@string/all"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_text_size" />

                    <TextView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_toRightOf="@id/all_order"
                        android:background="@mipmap/message_bg"
                        android:gravity="center"
                        android:text="99+"
                        android:textColor="@color/white"
                        android:textSize="6sp"
                        android:visibility="gone" />
                </RelativeLayout>
            </LinearLayout>

            <include layout="@layout/item_mine1" />

            <include layout="@layout/item_mine2" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
